# sunsolve

./: .cruft.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENCE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  test.py
.github/actions/python-poetry-env/: action.yml
.github/workflows/: cookiecutter.yml  release.yml
api_docs/: index.html
changelog/: index.html
docs/: api_docs.md
search/: search_index.json
src/: sunsolve.py
src/optimize/: fitness_function.py
src/plot_spectrum/: plotter.py
src/sunsolve/: __init__.py  fitness_function.py  plotter.py  sunsolve.py
src/sunsolve/data/: am0.xls  leds.xlsx
tests/: test_sunsolve.py
